# coreflow_project

./: .gitignore  README.md  README_TUTORIA.md
backend/: Cargo.toml  coreflow_users.db
backend/src/: main.rs
backend/src/modules/: auth.rs  backup.rs  cleanup.rs  db.rs  diagnostic.rs  network.rs  power.rs  privacy.rs  process.rs  startup.rs  sysinfo_mod.rs
db/: schema.sql
frontend/: app.js
